tests/cases/fail/dict_items_args.p4
def main() -> None:
    colors = {"apple": "red"}
    print(colors.items("extra"))
